--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build": "npx webpack --mode=production",
     "build_dev": "npx webpack --mode=development"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/robbederks/downzip"
+  },
+  "homepage": "https://github.com/robbederks/downzip",
   "keywords": [
     "zip",
     "download",
