--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Library to enable client-side code to stream potentially large files into a zipped download",
   "main": "./dist/main.js",
   "scripts": {
-    "test": "mocha --require @babel/register --require @babel/polyfill",
+    "test": "nyc --all --include src/* mocha --require @babel/register --require @babel/polyfill",
     "build": "npx webpack --mode=production",
     "build_dev": "npx webpack --mode=development"
   },
@@ -30,6 +30,7 @@
     "@babel/register": "^7.7.7",
     "babel-loader": "^8.0.6",
     "mocha": "^6.2.2",
+    "nyc": "^15.0.0",
     "service-worker-loader": "^3.3.1",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.10"
