--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,24 +3,27 @@ name: CI Tests
 on: [push]
 
 jobs:
-  build:
-
+  build-test-coverage:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
+    - name: npm install, build
       run: |
         npm ci
         npm run build --if-present
         npm test
       env:
         CI: true
+    - name: tests and coverage
+      uses: paambaati/codeclimate-action@v2.2.4
+      env:
+        CC_TEST_REPORTER_ID: 2bd924d61d2951f67af1454760c32cb8f7eb2d2d47daf3be8aa63d80291cf122
+      with:
+        coverageCommand: npm test
