Reverted coverage tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/main.js",
   "scripts": {
     "setup_nyc_folder": "mkdir -p .nyc_output && chmod -R u+x .",
-    "test": "nyc --all --include src/* mocha --require @babel/register --require @babel/polyfill",
+    "test_coverage": "nyc --all --include src/* mocha --require @babel/register --require @babel/polyfill --text",
+    "test": "mocha --require @babel/register --require @babel/polyfill --text",
     "build": "npx webpack --mode=production",
     "build_dev": "npx webpack --mode=development"
   },
