--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,4 +27,4 @@ jobs:
       env:
         CC_TEST_REPORTER_ID: 2bd924d61d2951f67af1454760c32cb8f7eb2d2d47daf3be8aa63d80291cf122
       with:
-        coverageCommand: npm run test
+        coverageCommand: npm run test_coverage
