--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,12 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
-  ]
+  ],
+  "env": {
+    "nyc": {
+      "plugins": [
+        "istanbul"
+      ]
+    }
+  }
 }
