--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules/
 .nyc_output/
 coverage/
 instrumented-src/
-temp.zip
-temp64.zip
-temp64_big.zip
+temp-*.zip
+temp64-*.zip
+temp64-big-*.zip
